fixed domain name

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<meta http-equiv="refresh" content="0; url=https://github.io/lukrop/GCICAP/doc/" />
+<meta http-equiv="refresh" content="0; url=https://lukrop.github.io/GCICAP/doc/" />
 </head>
 <body>
 <a href="doc/index.html">API documentation</a>
